--- a/css/styles.css
+++ b/css/styles.css
@@ -186,16 +186,38 @@ div.top-container {
     align-self: center;
 }
 .experience-flex ul{
-    font-size: 1.5vw;
     text-align: left;
 }
 .experience-flex ol{
     text-align: left;
 }
 .experience-flex p{
-    font-size:2.5vw;
-    text-align: left;
+    text-align: justify;
 }
+
+/* Media query for small devices */
+@media only screen and (max-width: 768px) {
+  ul, ol {
+    font-size: 14px;
+  }
+}
+
+/* Media query for medium devices */
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+  ul,ol {
+    font-size: 16px;
+  }
+}
+
+/* Media query for large devices */
+@media only screen and (min-width: 1025px) {
+  ul,ol {
+    font-size: 18px;
+  }
+}
+
+
+
 .react{
     flex-basis: 26%;
     width:25%;
